<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:layout_width="@dimen/width_600"
        android:layout_height="@dimen/height_400"
        android:layout_marginTop="@dimen/margin_minus_100"
        android:scaleType="fitXY"
        android:src="@drawable/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="@dimen/dimen_250"
        android:layout_height="@dimen/dimen_250"
        android:src="@drawable/jooksmine_logo"
        app:layout_constraintBottom_toTopOf="@+id/cardViewLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_24"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="@dimen/dimen_20"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_10">

            <TextView
                style="@style/CardHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_into_jooksmine" />

            <TextView
                style="@style/Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_14"
                android:text="@string/email_address" />

            <EditText
                android:id="@+id/input_email"
                style="@style/ValueField"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_48"
                android:layout_marginTop="@dimen/margin_5"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress" />

            <TextView
                style="@style/Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_14"
                android:text="@string/password" />

            <EditText
                android:id="@+id/input_password"
                style="@style/ValueField"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_48"
                android:layout_marginTop="@dimen/margin_5"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/error_firebase"
                style="@style/Error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_12"
                android:textAlignment="center"
                android:visibility="gone"
                tools:text="@string/login_error"
                tools:visibility="visible" />

            <com.example.fitness_tracking_app.base.PrimaryButton
                android:id="@+id/button_log_in"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="@dimen/margin_14"
                app:isActive="false"
                app:text="@string/log_in" />

            <TextView
                android:id="@+id/view_forgot_password"
                style="@style/Body2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_36"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/forgot_password_reset_password" />

            <TextView
                android:id="@+id/view_create_new_account"
                style="@style/Body2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_36"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/new_to_jooksmine_create_new_account" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
