<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:layout_width="@dimen/width_600"
        android:layout_height="@dimen/height_400"
        android:layout_marginTop="@dimen/margin_minus_100"
        android:scaleType="fitXY"
        android:src="@drawable/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="@dimen/width_200"
        android:layout_height="@dimen/height_200"
        android:src="@drawable/jooksmine_logo"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/arrow_back"
        android:layout_width="@dimen/width_40"
        android:layout_height="@dimen/height_40"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_52"
        android:clickable="true"
        android:focusable="true"
        android:rotation="180"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_arrow" />

    <LinearLayout
        android:id="@+id/linear_layout_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_24"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            style="@style/CardHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_jooksmine" />

        <TextView
            style="@style/Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_14"
            android:text="@string/email_address" />

        <EditText
            android:id="@+id/input_email"
            style="@style/ValueField"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_48"
            android:layout_marginTop="@dimen/margin_5"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

        <TextView
            style="@style/Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_14"
            android:text="@string/password" />

        <EditText
            android:id="@+id/input_password"
            style="@style/ValueField"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_48"
            android:layout_marginTop="@dimen/margin_5"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            style="@style/Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_14"
            android:text="@string/confirm_password" />

        <EditText
            android:id="@+id/input_confirm_password"
            style="@style/ValueField"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_48"
            android:layout_marginTop="@dimen/margin_5"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/error_passwords"
            style="@style/Error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:text="@string/error_passwords_dont_match"
            android:textAlignment="center"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/error_firebase"
            style="@style/Error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:text="@string/error_email_already_exists"
            android:textAlignment="center"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.example.fitness_tracking_app.base.PrimaryButton
            android:id="@+id/button_create_new_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_50"
            android:layout_margin="@dimen/margin_14"
            app:isActive="false"
            app:text="@string/create_new_account" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
