<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_50"
        android:orientation="vertical">

        <TextView
            style="@style/Body9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/input_your_password"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ed_password"
            style="@style/ValueField"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_48"
            android:layout_margin="@dimen/margin_12"
            android:layout_marginTop="@dimen/margin_5"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tv_error"
            style="@style/Error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:visibility="gone"
            tools:text="@string/error_generic"
            tools:visibility="visible" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/grey_150"
            android:gravity="center"
            android:padding="@dimen/margin_12"
            android:text="@string/delete_account"
            android:textColor="@color/black" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_loading"
        android:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_50"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/lottie_dots" />
    </FrameLayout>
</FrameLayout>