<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_10">

        <TextView
            android:id="@+id/tv_title"
            style="@style/DialogHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_12"
            android:gravity="center"
            android:text="@string/do_you_want_to_challenge_your_friend" />

        <TextView
            android:id="@+id/tv_with_friend"
            style="@style/Body4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:gravity="center"
            android:text="@string/run_with_friend" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_weight="1"
                android:background="@color/grey_400" />

            <TextView
                style="@style/Body4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_weight="1"
                android:background="@color/grey_400" />

        </LinearLayout>


        <TextView
            android:id="@+id/tv_alone"
            style="@style/Body4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/run_alone" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_challenges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_10"
        android:visibility="visible"
        tools:itemCount="10"
        tools:listitem="@layout/item_challenge_friend" />

    <LinearLayout
        android:id="@+id/ll_no_friends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="@dimen/width_80"
            android:layout_height="@dimen/height_80"
            android:layout_margin="@dimen/margin_20"
            android:src="@drawable/icon_not_found" />

        <TextView
            style="@style/Body7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friends_list_is_empty" />

    </LinearLayout>
</LinearLayout>
